# terratech

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  mapgen-config-version.cmake.in  mapgen-config.cmake
doc/: .gitignore  Doxyfile.in  project_info.txt.in
doc/web/: download.html.in  index.html.in
include/: .gitignore  biome_table.hpp  clump.hpp  elimination_distribution.h  elimination_distribution.hpp  map.h  map.hpp  map_type.h  map_type.hpp  mapgen.h  mapgen_config.h  mapgen_config.h.in  mapgen_errors.h  perlin_noise.h  perlin_noise.hpp  pgm.h  point.h  point.hpp  ppm.h  probability_structure.h  probability_structure.hpp  region.h  region.hpp  ressource_generator.h  ressource_generator_by_elimination.h  ressource_generator_by_points.h  rgb.h  uniform_point_distribution.h  uniform_point_distribution.hpp  uniform_ressource_distribution_by_point.h  uniform_ressource_distribution_by_point.hpp  weighted_distribution.h  weighted_distribution.hpp
script/: deploy  deploy.sh
src/: biome_table.cpp  map.cpp  mapgen_api.cpp  perlin_noise.cpp  region.cpp
test/: CMakeLists.txt
test/api/: main.cpp
test/biome-generator/: main.cpp
test/civilization-map-generator/: main.cpp
test/common/: helper.hpp  pgm.h  ppm.h  rgb.h
test/noise-texture-generator/: main.cpp
test/water-generator/: main.cpp
